chore: Refactor code to use DBConnectionUtil for database connection

--- a/src/com/hackerthon/config/config.properties
+++ b/src/com/hackerthon/config/config.properties
@@ -2,3 +2,11 @@ url=jdbc:mysql://localhost:3307/hackerthon
 driverName=com.mysql.jdbc.Driver
 username=root
 password=root
+
+# XPaths #
+XpathEmployeeIDKey=EmployeeID/text()
+XpathEmployeeNameKey=EmployeeFullName/text()
+XpathEmployeeAddressKey=EmployeeFullAddress/text()
+XpathFacultyNameKey=FacultyName/text()
+XpathDepartmentKey=Department/text()
+XpathDesignationKey=Designation/text()
