update config constants

--- a/src/com/hackerthon/config/config.properties
+++ b/src/com/hackerthon/config/config.properties
@@ -10,3 +10,9 @@ XpathEmployeeAddressKey=EmployeeFullAddress/text()
 XpathFacultyNameKey=FacultyName/text()
 XpathDepartmentKey=Department/text()
 XpathDesignationKey=Designation/text()
+
+# File paths
+xmlSourcePath=src/com/hackerthon/config/EmployeeRequest.xml
+xsltSourcePath=src/com/hackerthon/config/Employee-modified.xsl
+outputResultPath=src/com/hackerthon/config/EmployeeResponse.xml
+responseXmlPath=src/com/hackerthon/config/EmployeeResponse.xml
